--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
   },
   "homepage": "https://github.com/virendrapatelnuk/fullstack-javascript#readme",
   "dependencies": {
+    "compression": "^1.7.4",
     "express": "^4.17.1",
+    "express-minify": "^1.0.0",
+    "express-minify-html": "^0.12.0",
     "faker": "^5.5.3",
-    "swig": "^1.4.2"
+    "swig": "^1.4.2",
+    "swig-minifier": "^0.4.4-b"
   }
 }
