--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-minify": "^1.0.0",
     "express-minify-html": "^0.12.0",
     "faker": "^5.5.3",
+    "mongoose": "^5.13.9",
     "swig": "^1.4.2",
     "swig-minifier": "^0.4.4-b"
   }
